Interface Style Development
Further CSS application.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
 
 	<header>
 		
-	    <h1>Movie Scene Search</h1>
+		<nav>
 
-	    <!-- Rendered buttons will get dumped Here  -->
-	    <div id="buttons-view"></div>
+		    <h1>Giphy Movie Scene Search</h1>
 
-	    <form id="scene-form">
-			<label for="scene-input">Find new movie scenes:</label>
-			<input type="text" id="scene-input"><br>
+		    <form id="scene-form">
+				<label for="scene-input">Find new movie scenes:</label>
+				<input type="text" id="scene-input">
 
-			<!-- Button triggers new movie to be added -->
-			<input id="add-scene" type="submit" value="Add a Movie Scene Query">
-		</form>
+				<!-- Button triggers new movie to be added -->
+				<input id="add-scene" type="submit" value="Add a Movie Scene Query">
+			</form>
+
+			<!-- Rendered buttons will get dumped Here  -->
+		    <div id="buttons-view"></div>
+
+		</nav>
 
 	</header>
 
